# Dimits

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
dimits/: __init__.py  main.py  ttsmodel.py  utils.py
