[tool.poetry]
name = "dimits"
version = "0.0.31-alpha"
description = "Dimits is a Python library that provides an easy-to-use interface to the Piper text-to-speech (TTS) system. It utilizes the powerful Piper TTS engine, which is optimized for Raspberry Pi 4, to generate high-quality synthesized speech."
authors = ["Reqeique <ananiyajemberu21@gmail.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
requests = { version = "^2.13.0", source = "private" }
espeak-phonemizer = { version = "*"}
espeak-phonemizer-windows = { version = "*", platform = "win32" }
tqdm = "4.64.0" 
onnxruntime = { version = "*"}
soundfile = { version = "*"}
huggingface-hub = { version = "0.23.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
